# LexAI

./: .gitignore  README.md
apps/: README.md
apps/mobile_app/: README.md  pubspec.yaml
apps/web_app/: .firebaserc  README.md  index.html  package-lock.json  package.json  vite.config.js
research/: README.md
services/core_api/: .dockerignore  .env  .env.example  Dockerfile  README.md  README_hybrid.md  example_output.txt  pyproject.toml  requirements.txt  streamlit_app.py  test_2_queries.py  test_api.py  test_rag.py
services/core_api/app/: main.py
services/core_api/app/api/: auth_routes.py  chat_ws.py  history_api.py  legal_api.py
services/core_api/app/core/: auth.py  db.py  security.py
services/core_api/app/models/: models.py
services/core_api/app/services/: ai_service.py  file_service.py  translation_service.py
services/core_api/app/services/kg/: kg_loader.py  kg_query.py
services/core_api/app/services/rag/: embedder.py  generator.py  rag_service.py  retriever.py
services/core_api/app/services/voice/: stt.py  test.py  tts.py
services/core_api/backend/data/: kg_mock.json
services/core_api/data/legal_docs/: file1.txt  file2.txt  file3.txt
services/core_api/docs/: VOICE_AI_README.md
services/core_api/hybrid_search/: README.md  api.py  config.py  llm_client.py  test_groq_connection.py  utils.py
services/core_api/scripts/: build_index.py  chunk_documents.py  endpoint_test.py  extract_pdfs.py  install_ffmpeg.py  voice_pipeline_test.py
services/core_api/tests/: conftest.py  test_backend.py  test_security_and_cases.py
(+99 files in other folders)
