[project]
name = "core_api"
version = "0.1.0"
description = "Core API and Retrieval Service for LegalTech Super-App"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "openai-whisper>=20231117",
    "gTTS>=2.5.1",
    "langdetect>=1.0.9",
    "deep-translator>=1.11.4",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.3.1",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "google-genai>=0.3.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "tqdm>=4.66.1",
    "numpy>=1.26.4",
    "redis>=5.0.1",
    "psutil>=5.9.8",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "arize-phoenix-otel>=0.1.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0"
]
